--- a/style.css
+++ b/style.css
@@ -2,12 +2,12 @@ body {
     font-family: "Times New Roman", Times, serif;
     margin: 0;
     padding: 0;
-    background-color: #f89edc; /* Light pink background */
+    background-color: #c5caf7; /* Light pink background */
 }
 
 
 header {
-    background-color: #f8f1f1; /* white header */
+    background-color: #dc1b1b; /* white header */
     color: #fff; /* White text */
     padding: 20px;
     text-align: center;
